Wed, Nov 28, 2007 Daniel R Fisher
1.  Fixed a bug in QMCWalker.  When a walker was read in from a
    checkpoint file, the distances in QMCWalkerData were not updated,
    so QMCFunctions could not evaluate the configuration.

Sun, Nov 11, 2007 Daniel R Fisher
1.  Fixed a memory leak in CambridgeThreeBodyJastrow.  Arrays for
    powers of the distances and other temp variables were being
    allocated and not deleted.  This was a problem for optimization
    runs because several Jastrows are created and evaluated at once.
2.  Changed the objective function in QMCEquilibrationArray.

Wed, Nov 7, 2007 Amos Anderson
1.  I improved the performance of the 3 body jastrow parameter derivative calculations.
    In QMCThreeBodyJastrow::packageDerivatives, the code will accumulate some of the
    derivative data and apply the totalDerivativesToFree on the accumulated data, instead
    of each entry individually.

Mon, Nov 5, 2007 Amos Anderson
1.  I improved the performance of the 3 body jastrow calculations. I used a wide variety
    of tricks, and for my test input file (which is mostly correlated sampling), the code
    runs at 40-50% faster. There's no difference in the energies.

    There was a *very* slight numerical difference in the results (8th
    decimal place) for the correlated sampling energies. The derivatives themselves
    differ in the 14th place. However, I think this difference is negligible.

Mon, Oct 29, 2007 Amos Anderson
1.  I changed the way Jastrows are read in. Old input files are still compatible.
    Now you do not have to include Jastrow functions that will not be used. I added
    a parameter link_NEE_Jastrows, which is analogous to link_Jastrow_parameters.
    Setting link_NEE_Jastrows = 2 will use the same jastrow for NEupEdn, NEupEup,
    and NEdnEdn, setting link_NEE_Jastrows = 1 will set NEdnEdn = NEupEup,
    and link_NEE_Jastrows = 0 will use separate functions for all 3.

Fri, Oct 26, 2007 Daniel R Fisher